--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,17 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>2.0.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.12.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
